--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
@@ -11,7 +11,7 @@
 %DVIPSWebPage: (www.radicaleye.com)
 %DVIPSCommandLine: dvips -t a4 -o INSTALL.ps INSTALL.dvi
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2002.06.10:1421
+%DVIPSSource:  TeX output 2002.07.30:1355
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -293,11 +293,11 @@ rf /Ff 133[ 29 33 33 48 33 33 18 26 22 33 33 33 33 52
 TeXBase1Encoding ReEncodeFont} 51 66.4176 /Times-Roman
 rf /Fg 198[ 25 25 25 25 25 25 25 25 25 49[{
 TeXBase1Encoding ReEncodeFont} 9 49.8132 /Times-Roman
-rf /Fh 133[ 44 50 1[ 72 50 55 33 39 44 55 55 50 55 83
+rf /Fh 133[ 44 50 50 72 50 55 33 39 44 55 55 50 55 83
 28 55 33 28 55 50 33 44 55 44 55 50 6[ 66 1[ 72 100 72
 2[ 55 72 78 61 78 72 94 66 2[ 39 78 78 61 1[ 72 72 1[ 72
 1[ 50 5[ 50 50 50 50 50 50 50 50 50 50 1[ 25 33 3[ 33
-33 40[{ TeXBase1Encoding ReEncodeFont} 59 99.6264 /Times-Bold
+33 40[{ TeXBase1Encoding ReEncodeFont} 60 99.6264 /Times-Bold
 rf
 %DVIPSBitmapFont: Fi cmsy10 10 1
 /Fi 1 16 df<EB1FF0EBFFFE487F000714C04814E04814F04814F8A24814FCA3B612FEA9
@@ -334,8 +334,8 @@ rf /Fo 136[ 149 103 115 69 80 92 1[ 115 103 115 172 57
 55 55 60 76 37 47 47 47 23 23 42 42 42 42 42 42 42 42
 42 42 23 21 28 21 47 42 28 28 28 2[ 42 42 34 28 29[ 46
 46 2[{ TeXBase1Encoding ReEncodeFont} 92 83.022 /Times-Roman
-rf /Fq 138[ 50 28 5[ 50 5[ 50 2[ 44 26[ 39 23[ 50 50
-50 48[{ TeXBase1Encoding ReEncodeFont} 9 99.6264 /Times-Roman
+rf /Fq 134[ 50 3[ 50 28 7[ 28 3[ 50 29[ 39 22[ 50 50
+1[ 50 48[{ TeXBase1Encoding ReEncodeFont} 9 99.6264 /Times-Roman
 rf /Fr 138[ 72 40 56 2[ 72 72 72 1[ 40 2[ 40 72 2[ 64
 72 1[ 72 64 6[ 88 16[ 48 1[ 104 20[ 72 3[ 36 46[{
 TeXBase1Encoding ReEncodeFont} 18 143.462 /Times-Roman
@@ -771,8 +771,8 @@ end
 @endspecial 591 2998 a
  currentpoint currentpoint translate 1 1.06113 div 1 1.06113 div scale
 neg exch neg exch translate
- 591 2998 a Fq 1608 3264 a(10th) 24
-b(June) h(2002) p 90 rotate dyy eop
+ 591 2998 a Fq 1616 3264 a(30th) 24
+b(July) g(2002) p 90 rotate dyy eop
 %%Page: 1 2
 1 1 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -2083,10 +2083,10 @@ b(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g
 3321 y(2.8.7) e(Determing) 19 b(and) h(pub) n(lishing) g(your) f(host) h
 (names) 62 b(.) 41 b(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g
 (.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100
-b(26) 465 3446 y(2.8.8) e(ezPublish) 20 b(2.1) 49 b(.) 42
-b(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g
-(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
-(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100 b(27) 465
+b(26) 465 3446 y(2.8.8) e(ezPublish) 20 b(2.2.) n(x) 51
+b(.) 41 b(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
+(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h
+(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100 b(27) 465
 3571 y(2.8.9) e(Creating) 20 b(the) g(database) 31 b(.) 42
 b(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) g(.) g
 (.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
@@ -11745,74 +11745,72 @@ b(bro) l(wser) g(should) f(sho) n(w) g(the) h(apach) n(e) g(welcome) 150
 (host) f(name) g(you) g(just) h(entered) f(\(ez.m) n(y) -5
 b(.intran) n(et) 22 b(and) f(ezadmin) n(.my) -5 b(.in) n(tranet\)) 21
 b(and) g(for) 150 712 y(e) n(v) o(ery) e(client.) p Fh
-150 975 a(2.8.8) 99 b(ezPublish) 25 b(2.1) p Fn 150 1156
-a(Unpacking) 20 b(the) h(\002les) p Fp 150 1336 a(Extract) 35
-b(the) h(ezpu) n(blish) g(\002le) g(to) g(C:\\Apache\\htd) n(ocs\\) g
-(,) k(using) 35 b(folde) n(r) h(names.) 71 b(This) 36
-b(will) g(gi) n(v) o(e) f(you) g(all) h(\002les) g(in) 150
-1436 y(C:\\Apache\\htd) n(ocs\\ezpub) n(lish_2_1) n(.) k(Put) 26
-b(created) n(irs.bat) f(in) g(C:\\Apache\\htdo) n(cs\\ezpublish_) n
-(2_1) f(and) h(run) f(it.) 40 b(This) 150 1535 y(creates) 22
-b(the) f(cache) g(director) n(ies.) 30 b(If) 21 b(your) f(did) h(not) h
-(uses) g(pub) n(lish/publish) f(as) h(you) n(r) g(MySQL) f(user/passw) o
-(ord) g(settings,) 150 1635 y(open) e(site.ini,) h(and) g(just) h
-(chang) n(e) g(the) f(user) g(and) g(passw) o(ord) f(lines) i(to) f
-(match) g(you) n(r) h(settings.) p Fn 150 1881 a(Err) o(or) f
-(Checking:) p Fp 150 2062 a(While) 25 b(apache) f(and) h(MySQL) f(serv)
-o(ers) h(are) g(run) n(ning,) g(open) f(http://localho) n
-(st/ezpublish_) n(2_1) g(in) h(your) f(webbro) l(wser) -5
-b(.) 150 2161 y(This) 20 b(should) g(gi) n(v) o(e) f(you) g(an) h
-("could) f(not) h(connec) n(t) h(to) g(datab) n(ase) g(...) k(no) 20
-b(database) g(selected".) 150 2385 y(That') -5 b(s) 25
-b(\002ne.) 41 b(It) 25 b(sho) n(ws) g(that) h(PHP) g(ran) f(the) g
-(inde) o(x) n(.php) f(of) h(the) h(ezPub) n(lish) g(installation) f
-(and) g(tried) g(to) g(conne) n(ct) h(to) g(the) 150
-2485 y(database) c(serv) o(er) -5 b(.) 33 b(Connecting) 22
+150 975 a(2.8.8) 99 b(ezPublish) 25 b(2.2.x) p Fn 150
+1156 a(Unpacking) 20 b(the) h(\002les) p Fp 150 1336
+a(Extract) 35 b(the) h(ezpu) n(blish) g(\002le) g(to) g
+(C:\\Apache\\htd) n(ocs\\) g(,) k(using) 35 b(folde) n(r) h(names.) 71
+b(This) 36 b(will) g(gi) n(v) o(e) f(you) g(all) h(\002les) g(in) 150
+1436 y(C:\\Apache\\htd) n(ocs\\ezpub) n(lish_2_2) n(_x) 16
+b(\(x) f(is) i(replaced) e(with) h(the) g(curren) n(t) h(eZ) f(pub) n
+(lish) h(v) o(ersion) n(\).) 24 b(Put) 16 b(createdir) n(s.bat) g(in)
+150 1535 y(C:\\Apache\\htd) n(ocs\\ezpub) n(lish_2_2) n(_x) j(and) g
+(run) f(it.) 25 b(This) 20 b(creates) f(the) g(cache) g(directo) n
+(ries.) 25 b(If) 19 b(your) f(did) h(not) g(uses) h(pub) n(-) 150
+1635 y(lish/publish) j(as) h(your) f(MySQL) g(user/passw) o(ord) g
+(settings,) h(open) f(site.ini,) i(and) e(just) h(change) f(the) g
+(user) h(and) f(passw) o(ord) 150 1735 y(lines) e(to) f(match) g(you) n
+(r) h(settings.) p Fn 150 1981 a(Err) o(or) f(Checking:) p
+Fp 150 2161 a(While) e(apache) e(and) h(MySQL) g(serv) o(ers) g(are) h
+(run) n(ning,) f(open) g(http://loca) n(lhost/ezpub) n(lish_2_2) n(_x) g
+(in) h(you) n(r) g(webbro) l(wser) -5 b(.) 150 2261 y(This) 20
+b(should) g(gi) n(v) o(e) f(you) g(an) h("could) f(not) h(connec) n(t) h
+(to) g(datab) n(ase) g(...) k(no) 20 b(database) g(selected".) 150
+2485 y(That') -5 b(s) 25 b(\002ne.) 41 b(It) 25 b(sho) n(ws) g(that) h
+(PHP) g(ran) f(the) g(inde) o(x) n(.php) f(of) h(the) h(ezPub) n(lish) g
+(installation) f(and) g(tried) g(to) g(conne) n(ct) h(to) g(the) 150
+2585 y(database) c(serv) o(er) -5 b(.) 33 b(Connecting) 22
 b(to) h(the) g(serv) o(er) f(w) o(as) i(okay) -7 b(,) 24
 b(b) n(ut) f(the) g(database) f("publish") g(could) g(not) h(be) g(fou)
-n(nd,) g(as) h(we) 150 2585 y(did) c(not) g(yet) g(create) g(it.) p
-Fh 150 2847 a(2.8.9) 99 b(Cr) n(eating) 25 b(the) h(database) p
-Fp 150 3028 a(Open) h(http://apach) n(e.my) -5 b(.in) n(tranet/ph) n
+n(nd,) g(as) h(we) 150 2684 y(did) c(not) g(yet) g(create) g(it.) p
+Fh 150 2947 a(2.8.9) 99 b(Cr) n(eating) 25 b(the) h(database) p
+Fp 150 3127 a(Open) h(http://apach) n(e.my) -5 b(.in) n(tranet/ph) n
 (pMyAdm) n(in) 28 b(in) h(you) n(r) f(webbro) l(wser) -5
 b(.) 50 b(Create) 28 b(a) h(ne) n(w) e(database) h(named) f("pub) n(-)
-150 3127 y(lish".) 150 3352 y(Run) 15 b(a) h(SQL) f(query) f(and) h
+150 3227 y(lish".) 150 3451 y(Run) 15 b(a) h(SQL) f(query) f(and) h
 (choo) n(se) h(to) g(load) e(it) i(from) e(a) i(te) o(xt\002le.) 23
-b(Bro) n(wse) 16 b(to) f(C:\\apache\\htd) n(ocs\\ezpub) n(lish_2_1) n
-(\\sql\\publish.) n(sql) 150 3451 y(and) k(con\002rm) f(with) i("Go".) k
-(This) c(should) e(tak) o(e) i(a) g(while) f(as) i(the) e(tables) h
-(are) f(created) g(and) g(some) g(data) g(is) i(inserted.) j(Check) 150
-3551 y(the) c(\002rst) h(line,) f(if) h(the) f(e) o(x) o(ec) n(ution) g
-(of) g(the) g(SQL) h(quer) n(y) f(w) o(as) h(successful.) p
-Fn 150 3797 a(Err) o(or) f(Checking:) p Fp 150 3977 a(In) d(you) n(r) h
-(webbr) n(o) n(wser) m(,) f(open) f(http://apach) n(e.my) -5
-b(.) n(intranet/ezp) n(ublish_2) n(_1.) 24 b(This) 17
-b(should) f(gi) n(v) o(e) h(you) f(nearly) g(the) h(kno) n(w) n(n) 150
-4077 y(ezPublish) j(screen.) 150 4201 y(Note) k(that) h(you) f(cann) n
-(ot) h(access) g(the) f(admin) g(site) h(yet) g(and) f(the) g(user) g
-(site) i(will) f(not) f(w) o(ork) g(v) o(ery) f(much) h(\(links,) h
-(missing) 150 4301 y(graph) n(ics) c(etc\).) k(W) -7
-b(e) 21 b(ha) n(v) o(e) f(not) g(yet) g(set) h(the) f(virtual) g
-(hosts.) 25 b(But) c(we) f(will) h(no) n(w) -5 b(.) p
-Fh 150 4564 a(2.8.10) 99 b(V) l(irtual) 25 b(hosts) g(and) g(r) n
-(ewrite) h(rules) p Fp 150 4744 a(I) 20 b(will) h(gi) n(v) o(e) e(you) g
+b(Bro) n(wse) 16 b(to) f(C:\\apache\\htd) n(ocs\\ezpub) n(lish_2_2) n
+(_x\\sql\\pu) n(blish.sql) 150 3551 y(and) k(con\002rm) f(with) i
+("Go".) k(This) c(should) e(tak) o(e) i(a) g(while) f(as) i(the) e
+(tables) h(are) f(created) g(and) g(some) g(data) g(is) i(inserted.) j
+(Check) 150 3650 y(the) c(\002rst) h(line,) f(if) h(the) f(e) o(x) o
+(ec) n(ution) g(of) g(the) g(SQL) h(quer) n(y) f(w) o(as) h
+(successful.) p Fn 150 3896 a(Err) o(or) f(Checking:) p
+Fp 150 4077 a(In) 31 b(you) n(r) g(webbro) l(wser) m(,) i(open) d
+(http://apach) n(e.my) -5 b(.) n(intranet/ezp) n(ublish_2) n(_2_x) n(.)
+58 b(This) 31 b(should) f(gi) n(v) o(e) g(you) g(nearly) g(the) 150
+4177 y(kno) n(w) n(n) 21 b(ezPublish) e(screen.) 150
+4301 y(Note) 24 b(that) h(you) f(cann) n(ot) h(access) g(the) f(admin) g
+(site) h(yet) g(and) f(the) g(user) g(site) i(will) f(not) f(w) o(ork) g
+(v) o(ery) f(much) h(\(links,) h(missing) 150 4401 y(graph) n(ics) c
+(etc\).) k(W) -7 b(e) 21 b(ha) n(v) o(e) f(not) g(yet) g(set) h(the) f
+(virtual) g(hosts.) 25 b(But) c(we) f(will) h(no) n(w) -5
+b(.) p Fh 150 4663 a(2.8.10) 99 b(V) l(irtual) 25 b(hosts) g(and) g(r) n
+(ewrite) h(rules) p Fp 150 4844 a(I) 20 b(will) h(gi) n(v) o(e) e(you) g
 (a) h(quick) f(sample,) g(ho) n(w) h(to) g(set) g(up) g(apache) f(to) h
 (use) g(virtual) f(hosts) h(and) g(re) n(write) f(rules) h(as) h(we) f
-(need) f(them) 150 4844 y(for) h(ezPub) n(lish) h(to) g(w) o(ork) n(.)
-150 5068 y(A) 29 b(goo) n(d) f(e) o(xplana) n(tion) g(of) g(the) g
+(need) f(them) 150 4943 y(for) h(ezPub) n(lish) h(to) g(w) o(ork) n(.)
+150 5168 y(A) 29 b(goo) n(d) f(e) o(xplana) n(tion) g(of) g(the) g
 (virtual) g(host) g(and) g(re) n(write) f(rule) h(concep) n(t) h(is) g
 (in) f(chapter) f(4) i(of) f(the) g(installation) g(guid) n(e) 150
-5168 y(\(Apach) n(e) 21 b(con\002gu) n(ration\)) e(and) h(of) g(cour) n
+5267 y(\(Apach) n(e) 21 b(con\002gu) n(ration\)) e(and) h(of) g(cour) n
 (se) h(in) f(the) h(apach) n(e) g(docu) n(mentation) e(itself.) 150
-5392 y(Open) 33 b(your) g(httpd) n(.conf) g(and) g(search) h(for) f
+5491 y(Open) 33 b(your) g(httpd) n(.conf) g(and) g(search) h(for) f
 ("NameV) -5 b(irtu) n(alHost".) 66 b(Y) -9 b(ou) 33 b(need) h(to) g
 (enab) n(le) h(V) -5 b(irtualHo) n(sts) 35 b(using) f(the) 150
-5491 y(NameV) -5 b(irtua) n(lHosts) 23 b(directi) n(v) o(e) e(and) h
+5591 y(NameV) -5 b(irtua) n(lHosts) 23 b(directi) n(v) o(e) e(and) h
 (create) f(three) h(virtual) f(hosts.) 31 b(The) 22 b(\002rst) h(is) g
 (the) f(def) o(au) n(lt) h(host) f(for) f(this) i(web) f(serv) o(er) m
-(,) 150 5591 y(second) h(is) j(the) e(ezPublish) f(user) i(site,) g
-(third) f(is) h(the) f(ezPublish) g(admin) f(site.) 38
-b(Y) -9 b(ou) 24 b(can) g(omit) g(the) g(\002rst,) i(if) f(you) e(are) h
-(just) p 150 5723 V 1871 5823 a(27) p 90 rotate dyy eop
+(,) p 150 5723 V 1871 5823 a(27) p 90 rotate dyy eop
 %%Page: 28 29
 28 28 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -12179,51 +12177,54 @@ end
  currentpoint currentpoint translate 1 0.42603 div 1 0.42603 div scale
 neg exch neg exch translate
  150 138 a 150 172 3525 4 v Fp 150
-333 a(runn) n(ing) 20 b(ezPublish) g(on) g(the) g(system,) h(b) n(ut) f
+333 a(second) 23 b(is) j(the) e(ezPublish) f(user) i(site,) g(third) f
+(is) h(the) f(ezPublish) g(admin) f(site.) 38 b(Y) -9
+b(ou) 24 b(can) g(omit) g(the) g(\002rst,) i(if) f(you) e(are) h(just)
+150 432 y(runn) n(ing) c(ezPublish) g(on) g(the) g(system,) h(b) n(ut) f
 (you) g(will) h(not) f(be) g(able) g(to) h(access) g(phpM) n(yAdmin) n
-(,) g(the) g(apach) n(e) g(docu) n(menta-) 150 432 y(tion) f(or) g(an) o
-(y) n(thing) g(else) h(then.) 150 656 y(Cop) o(y) e(these) g(lines) g
+(,) g(the) g(apach) n(e) g(docu) n(menta-) 150 532 y(tion) f(or) g(an) o
+(y) n(thing) g(else) h(then.) 150 756 y(Cop) o(y) e(these) g(lines) g
 (into) g(httpd.) n(conf) g(and) f(sa) n(v) o(e.) 25 b(If) 19
 b(you) f(did) g(not) h(follo) n(w) f(my) h(suggestion) n(s) h(for) e
-(folder) g(names) h(of) g(apach) n(e) 150 756 y(and) h(for) f(the) h
+(folder) g(names) h(of) g(apach) n(e) 150 856 y(and) h(for) f(the) h
 (host) h(name) n(s,) g(you) e(need) h(to) g(mak) o(e) g(the) g(appro) n
-(priate) g(chang) n(es) h(here.) p Fk 150 984 a(#) 150
-1088 y(#) 40 b(Use) f(name-based) f(virtual) h(hosting.) 150
-1192 y(#) 150 1296 y(NameVirtual) n(Host) h(apache.m) n(y.intranet) 150
-1503 y(#) g(Server) f(default) f(site) i(\(default) e(server\)) 150
-1607 y(<VirtualHos) n(t) i(apache.my.i) n(ntranet>) 150
-1711 y(DocumentRoo) n(t) g(C:/Apache/h) n(tdocs) 150
-1815 y(ServerName) e(apache.my.int) n(ranet) 150 1918
-y(</VirtualHo) n(st>) 150 2230 y(#) i(ezPublish) e(User) h(site) 150
-2333 y(<VirtualHos) n(t) h(ez.my.intra) n(net>) 150 2437
-y(<Directory) e(C:/Apache/htd) n(ocs/ezpublish) n(_2_1>) 230
-2541 y(Options) h(FollowS) n(ymLinks) g(Indexes) g(ExecCGI) 230
-2645 y(AllowOver) n(ride) h(None) 150 2749 y(</Directory) n(>) 150
-2956 y(RewriteEngi) n(ne) g(On) 150 3060 y(#RewriteLog) e(rewrite_user)
-n(.log) 150 3164 y(#RewriteLog) n(Level) h(9) 150 3267
+(priate) g(chang) n(es) h(here.) p Fk 150 1084 a(#) 150
+1188 y(#) 40 b(Use) f(name-based) f(virtual) h(hosting.) 150
+1292 y(#) 150 1395 y(NameVirtual) n(Host) h(apache.m) n(y.intranet) 150
+1603 y(#) g(Server) f(default) f(site) i(\(default) e(server\)) 150
+1707 y(<VirtualHos) n(t) i(apache.my.i) n(ntranet>) 150
+1810 y(DocumentRoo) n(t) g(C:/Apache/h) n(tdocs) 150
+1914 y(ServerName) e(apache.my.int) n(ranet) 150 2018
+y(</VirtualHo) n(st>) 150 2329 y(#) i(ezPublish) e(User) h(site) 150
+2433 y(<VirtualHos) n(t) h(ez.my.intra) n(net>) 150 2537
+y(<Directory) e(C:/Apache/htd) n(ocs/ezpublish) n(_2_2_x>) 230
+2641 y(Options) h(FollowS) n(ymLinks) g(Indexes) g(ExecCGI) 230
+2744 y(AllowOver) n(ride) h(None) 150 2848 y(</Directory) n(>) 150
+3056 y(RewriteEngi) n(ne) g(On) 150 3160 y(#RewriteLog) e(rewrite_user)
+n(.log) 150 3263 y(#RewriteLog) n(Level) h(9) 150 3367
 y(RewriteRule) f(^/stats/stor) n(e/\(.*\).gif$) h(/ezstats) n
-(/user/storest) n(ats.php) g([S=3]) 150 3346 y(RewriteRule) f
+(/user/storest) n(ats.php) g([S=3]) 150 3446 y(RewriteRule) f
 (.*/ezmediaca) n(talogue/catal) n(ogue/\(.*\)$) 79 b(/var/www) n
 (/publish/ezmed) n(iacatalogue/c) n(atalogue/$1) 150
-3425 y([T="applica) n(tion/oct-stre) n(am",S=2]) 150
-3529 y(#) 40 b(The) f(lines) g(above) g(should) g(appear) g(on) h(the) f
+3525 y([T="applica) n(tion/oct-stre) n(am",S=2]) 150
+3629 y(#) 40 b(The) f(lines) g(above) g(should) g(appear) g(on) h(the) f
 (same) g(line) h(in) f(your) g(configuration) f(file!) 150
-3633 y(RewriteRule) g(^/filemanage) n(r/filedownloa) n
-(d/\([^/]+\)/\(.*\)) n($) 150 3737 y(/ezfilemana) n(ger/files/$1) g
-([T="applicati) n(on/oct-stream") n(,S=1]) 150 3840 y(#) i(The) f
+3732 y(RewriteRule) g(^/filemanage) n(r/filedownloa) n
+(d/\([^/]+\)/\(.*\)) n($) 150 3836 y(/ezfilemana) n(ger/files/$1) g
+([T="applicati) n(on/oct-stream") n(,S=1]) 150 3940 y(#) i(The) f
 (lines) g(above) g(should) g(appear) g(on) h(the) f(same) g(line) h(in)
-f(your) g(configuration) f(file!) 150 3944 y(RewriteRule) g
-(!\\.\(gif|css|) n(jpg|png\)$) h(/index.php) 150 4152
-y(DocumentRoo) n(t) h(C:/Apache/h) n(tdocs/ezpubli) n(sh_2_1) 150
-4255 y(ServerName) e(ez.my.intrane) n(t) 150 4359 y(</VirtualHo) n(st>)
-150 4671 y(#) i(ezPublish) e(Admin) h(site) 150 4774
-y(<VirtualHos) n(t) h(ezadmin.my.) n(intranet>) 150 4878
-y(<Directory) e(C:/Apache/htd) n(ocs/ezpublish) n(_2_1>) 230
-4982 y(Options) h(FollowS) n(ymLinks) g(Indexes) g(ExecCGI) 230
-5086 y(AllowOver) n(ride) h(None) 150 5189 y(</Directory) n(>) 150
-5397 y(RewriteEngi) n(ne) g(On) 150 5501 y(#RewriteLog) e(rewrite_admi)
-n(n.log) 150 5605 y(#RewriteLog) n(Level) h(9) p 150
-5723 V Fp 1871 5823 a(28) p 90 rotate dyy eop
+f(your) g(configuration) f(file!) 150 4044 y(RewriteRule) g
+(!\\.\(gif|css|) n(jpg|png\)$) h(/index.php) 150 4251
+y(DocumentRoo) n(t) h(C:/Apache/h) n(tdocs/ezpubli) n(sh_2_2_x) 150
+4355 y(ServerName) e(ez.my.intrane) n(t) 150 4459 y(</VirtualHo) n(st>)
+150 4770 y(#) i(ezPublish) e(Admin) h(site) 150 4874
+y(<VirtualHos) n(t) h(ezadmin.my.) n(intranet>) 150 4978
+y(<Directory) e(C:/Apache/htd) n(ocs/ezpublish) n(_2_2_x>) 230
+5082 y(Options) h(FollowS) n(ymLinks) g(Indexes) g(ExecCGI) 230
+5185 y(AllowOver) n(ride) h(None) 150 5289 y(</Directory) n(>) 150
+5497 y(RewriteEngi) n(ne) g(On) 150 5600 y(#RewriteLog) e(rewrite_admi)
+n(n.log) p 150 5723 V Fp 1871 5823 a(28) p 90 rotate
+dyy eop
 %%Page: 29 30
 29 29 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -12590,76 +12591,74 @@ end
  currentpoint currentpoint translate 1 0.42603 div 1 0.42603 div scale
 neg exch neg exch translate
  150 138 a 150 172 3525 4 v Fk 150
-333 a(RewriteRule) 38 b(.*/ezmediaca) n(talogue/catal) n(ogue/\(.*\)$)
-79 b(/var/www) n(/publish/ezmed) n(iacatalogue/c) n(atalogue/$1) 150
-412 y([T="applica) n(tion/oct-stre) n(am",S=1]) 150 515
+333 a(#RewriteLog) n(Level) 39 b(9) 150 436 y(RewriteRule) f
+(.*/ezmediaca) n(talogue/catal) n(ogue/\(.*\)$) 79 b(/var/www) n
+(/publish/ezmed) n(iacatalogue/c) n(atalogue/$1) 150
+515 y([T="applica) n(tion/oct-stre) n(am",S=1]) 150 619
 y(RewriteRule) 38 b(!\\.\(gif|css|) n(jpg|png\)$) h(/index_adm) n
-(in.php) 150 723 y(DocumentRoo) n(t) h(C:/Apache/h) n(tdocs/ezpubli) n
-(sh_2_1) 150 827 y(ServerName) e(ezadmin.my.in) n(tranet) 150
-930 y(</VirtualHo) n(st>) p Fp 150 1238 a(Y) -9 b(ou) 25
+(in.php) 150 827 y(DocumentRoo) n(t) h(C:/Apache/h) n(tdocs/ezpubli) n
+(sh_2_2_x) 150 930 y(ServerName) e(ezadmin.my.in) n(tranet) 150
+1034 y(</VirtualHo) n(st>) p Fp 150 1341 a(Y) -9 b(ou) 25
 b(can) h(check) f(you) n(r) h(V) -5 b(irtualHost) 26
 b(con\002g) n(uration) f(by) g(runn) n(ing) h(apach) n(e) h(-S) f(from)
 f(the) g(comman) n(d) h(line.) 42 b(If) 26 b(you) f(are) 150
-1337 y(ha) n(ving) 19 b(troub) n(le) i(with) f(the) h(re) n(write) e
+1441 y(ha) n(ving) 19 b(troub) n(le) i(with) f(the) h(re) n(write) e
 (rules,) h(you) g(can) g(enab) n(le) h(the) f(Re) n(writeLog) g(direc) n
 (ti) n(v) o(es) h(for) e(a) i(time) f(for) g(deb) n(ug) n(ging.) p
-Fn 150 1583 a(Err) o(or) g(Checking:) p Fp 150 1764 a(In) 31
+Fn 150 1687 a(Err) o(or) g(Checking:) p Fp 150 1868 a(In) 31
 b(your) f(webbro) l(wser) m(,) k(open) d(http://ez.m) n(y) -5
 b(.intr) n(anet.) 59 b(This) 32 b(should) e(gi) n(v) o(e) h(you) g(the)
-g(ezPublish) g(screen.) 58 b(Graphics) 150 1863 y(should) 26
+g(ezPublish) g(screen.) 58 b(Graphics) 150 1967 y(should) 26
 b(be) g(there,) i(links) e(should) g(be) g(w) o(orking) n(,) j(althou) n
 (gh) d(there) g(is) i(no) e(conten) n(t) i(in) e(the) h(database) f
-(yet.) 44 b(W) -7 b(e) 28 b(will) f(add) 150 1963 y(some) 20
-b(in) g(a) h(minute.) 150 2088 y(Y) -9 b(ou) 21 b(can) h(access) g(the)
+(yet.) 44 b(W) -7 b(e) 28 b(will) f(add) 150 2067 y(some) 20
+b(in) g(a) h(minute.) 150 2191 y(Y) -9 b(ou) 21 b(can) h(access) g(the)
 g(admin) f(site) h(throug) n(h) g(http://ezadm) n(in.my) -5
 b(.) n(intranet.) 29 b(Y) -9 b(ou) 21 b(can) h(log) f(in) h(using) f
-("admin") g(as) h(a) h(user) 150 2187 y(and) d("pub) n(lish") h(as) g
-(the) f(passw) o(ord) n(.) p Fh 150 2450 a(2.8.11) 99
-b(Sample) 25 b(data) p Fp 150 2630 a(In) 20 b(orde) n(r) h(to) f(ha) n
+("admin") g(as) h(a) h(user) 150 2291 y(and) d("pub) n(lish") h(as) g
+(the) f(passw) o(ord) n(.) p Fh 150 2553 a(2.8.11) 99
+b(Sample) 25 b(data) p Fp 150 2734 a(In) 20 b(orde) n(r) h(to) f(ha) n
 (v) o(e) g(somethin) n(g) g(to) h(play) f(with,) g(you) f(may) h(w) o
 (ant) g(to) g(insert) h(some) f(sample) g(data.) 150
-2854 y(Expan) n(d) i(the) f(data.tar) -5 b(.gz) 21 b(\002le) h(to) g
-(C:/Apache/h) n(tdocs/ezpu) n(blish_2_) n(1,) g(using) f(folder) g
-(name) n(s.) 30 b(This) 22 b(will) g(create) g(some) 150
-2954 y(image) e(\002les) h(and) e(some) h(do) n(wnlo) n(ads) h(for) e
-(the) i(sample) f(data.) 150 3178 y(No) n(w) 15 b(we) h(need) e(to) i
-(insert) f(the) g(data) g(itself) h(into) f(the) g(database.) 23
-b(There) n(fore) 15 b(open) f(http://apach) n(e.my) -5
-b(.) n(intranet/p) n(hpMyAd) n(min,) 150 3278 y(select) 18
+2958 y(Expan) n(d) 30 b(the) h(data.tar) -7 b(.gz) 31
+b(\002le) f(to) h(C:/Apache/htd) n(ocs/ezpub) n(lish_2_2) n(_x,) h
+(using) e(folde) n(r) h(names.) 55 b(This) 30 b(will) h(create) 150
+3058 y(some) 20 b(image) g(\002les) h(and) e(some) h(do) n(wnlo) n(ads)
+h(for) e(the) i(sample) f(data.) 150 3282 y(No) n(w) 15
+b(we) h(need) e(to) i(insert) f(the) g(data) g(itself) h(into) f(the) g
+(database.) 23 b(There) n(fore) 15 b(open) f(http://apach) n(e.my) -5
+b(.) n(intranet/p) n(hpMyAd) n(min,) 150 3382 y(select) 18
 b(the) f(database) g("pub) n(lish") h(by) f(clicking) f(on) h(it) h(in)
 g(the) f(left) h(frame) n(,) h(scroll) e(do) n(wn) f(past) i(the) f
-(list) i(of) e(tables) g(in) h(the) f(right) 150 3377
+(list) i(of) e(tables) g(in) h(the) f(right) 150 3481
 y(frame) d(and) h(run) f(a) i(SQL) g(quer) n(y) -5 b(.) 23
 b(Choose) 15 b(to) g(load) g(it) h(from) e(a) i(te) o(xt\002le.) 23
 b(Bro) n(wse) 15 b(to) h(C:\\apache\\h) n(tdocs\\ezpu) n(blish_2_) n
-(1\\sql\\data.sql) 150 3477 y(and) k(con\002r) n(m) h(with) f("Go".) 25
-b(Again) 19 b(check) g(the) i(\002rst) f(line,) h(if) f(the) g(e) o(x) o
-(ecu) n(tion) g(of) g(the) g(SQL) h(quer) n(y) g(w) o(as) g
-(successful.) 150 3701 y(This) 26 b(is) g(just) g(the) f(same) h
+(2_x\\sql\\da) n(ta.sql) 150 3581 y(and) k(con\002r) n(m) h(with) f
+("Go".) 25 b(Again) 19 b(check) g(the) i(\002rst) f(line,) h(if) f(the)
+g(e) o(x) o(ecu) n(tion) g(of) g(the) g(SQL) h(quer) n(y) g(w) o(as) g
+(successful.) 150 3805 y(This) 26 b(is) g(just) g(the) f(same) h
 (proced) n(ure) f(lik) o(e) h(the) f(\002rst-time-creatin) n(g) h(of) f
 (the) g(database) g(\(see) h(1.3.2) n(\),) h(only) d(with) i(data.sql)
-150 3801 y(instead) 20 b(of) g(pub) n(lish.sql.) p Fn
-150 4047 a(Err) o(or) g(Checking:) p Fp 150 4227 a(In) 31
+150 3905 y(instead) 20 b(of) g(pub) n(lish.sql.) p Fn
+150 4151 a(Err) o(or) g(Checking:) p Fp 150 4331 a(In) 31
 b(your) g(webbr) n(o) n(wser) m(,) j(open) d(http://ez.m) n(y) -5
 b(.intra) n(net.) 60 b(This) 32 b(should) f(gi) n(v) o(e) g(you) f(the)
-i(ezPublish) f(screen,) j(no) n(w) d(with) 150 4327 y(sample) 20
-b(articles.) p Fh 150 4590 a(2.8.12) 99 b(eZ) 25 b(publish) h(and) f
-(IIS) p Fp 150 4770 a(Not) 18 b(v) o(ery) f(much) g(inform) n(ation) h
+i(ezPublish) f(screen,) j(no) n(w) d(with) 150 4431 y(sample) 20
+b(articles.) p Fh 150 4693 a(2.8.12) 99 b(eZ) 25 b(publish) h(and) f
+(IIS) p Fp 150 4874 a(Not) 18 b(v) o(ery) f(much) g(inform) n(ation) h
 (is) h(a) n(v) n(ailable) f(for) f(this) i(webserv) o(e) n(r) -5
 b(.) 25 b(W) -7 b(e) 19 b(ha) n(v) o(e) f(ho) n(we) n(v) m(er) g(recei)
 n(v) o(ed) f(repo) n(rts) i(that) f(since) h(IIS) 150
-4870 y(does) h(not) g(ha) n(v) o(e) f(a) i(mod_) n(re) n(write) f(modu)
+4974 y(does) h(not) g(ha) n(v) o(e) f(a) i(mod_) n(re) n(write) f(modu)
 n(le) h(you) e(may) h(use) g(this) h(hack) p Fe 2134
-4840 a(8) p Fp 2187 4870 a(instead:) p Fn 150 5116 a(IIS) h
-(Con\002gura) n(tion:) p Fp 150 5296 a(-) e(Create) h(the) f(virtual) g
-(hosts) g(for) g(IIS.) g(\(on) n(ly) h(tested) f(on) g(win20) n(00\))
-150 5421 y(\(here) f(comes) h(the) g(not) g(so) h(ele) o(ga) n(nt) g
-(part\)) p 150 5474 1410 4 v Fg 240 5529 a(8) p Ff 270
-5553 a(Since) 16 b(eZ) f(publish) h(no) n(w) g(can) g(be) f(run) h
-(without) g(mod_re) n(w) r(rite) g(you) f(may) h(tak) o(e) g(look) g
-(at) g(chap) r(ter) f(3) g(as) h(it) f(may) h(pro) o(vide) g(you) g
-(with) g(a) f(bett) r(er) g(soluti) r(on) p 150 5723
-3525 4 v Fp 1871 5823 a(29) p 90 rotate dyy eop
+4943 a(8) p Fp 2187 4974 a(instead:) p 150 5027 1410
+4 v Fg 240 5082 a(8) p Ff 270 5106 a(Since) 16 b(eZ) f(publish) h(no) n
+(w) g(can) g(be) f(run) h(without) g(mod_re) n(w) r(rite) g(you) f(may)
+h(tak) o(e) g(look) g(at) g(chap) r(ter) f(3) g(as) h(it) f(may) h(pro)
+o(vide) g(you) g(with) g(a) f(bett) r(er) g(soluti) r(on) p
+150 5723 3525 4 v Fp 1871 5823 a(29) p 90 rotate dyy
+eop
 %%Page: 30 31
 30 30 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -13025,39 +13024,42 @@ end
 @endspecial 150 138 a
  currentpoint currentpoint translate 1 0.42603 div 1 0.42603 div scale
 neg exch neg exch translate
- 150 138 a 150 172 3525 4 v Fp 150
-333 a(-) 20 b(In) g(the) h(virtu) n(al) g(hosts) f(con\002g) g(for) f
-(the) i(user) f(site,) g(change) f(the) i(custom) e(error) n(s) p
-Fe 2455 303 a(9) p Fp 2510 333 a(for) g(404) h(and) f(405) g(to:) 254
-457 y(Message) h(type:) 25 b(URL) 254 582 y(URL:) c(/inde) o(x) n(.php)
-150 706 y(-) f(In) g(the) h(virtu) n(al) g(hosts) f(con\002g) g(for) f
-(the) i(admin) e(site,) i(chan) n(ge) g(the) f(custom) f(errors) h(for)
-f(404) h(and) f(405) h(to:) 254 831 y(Message) g(type:) 25
-b(URL) 254 955 y(URL:) c(/inde) o(x) n(_adm) n(in.php) 150
-1080 y(\(if) f(you) f(encoun) n(t) i(500-) n(err) f(you) f(may) h(need)
-g(to) g(rebo) n(ot) h(the) f(serv) o(er) m(,) f(Uhhh) n(..) 26
-b(I) 20 b(lo) o(v) o(e) f(MS,) 150 1204 y(it) i(gi) n(v) o(es) f(me) g
-(a) g(lot) h(of) f(cofee) f(brak) o(es.) 25 b(eZPub) n(lish) c(runin) n
-(g) g(on) e(IIS) i(is) g(unstable) n(\)) p Fl 150 1634
-a(2.9) 119 b(Mandrak) o(e) p Fp 150 1844 a(Thank) n(s) 21
-b(to) g(Mark) e(Polsen) h(for) g(gi) n(vin) n(g) h(us) f(this) h(infor)
-n(mation.) 150 1969 y(This) f(is) g(untested) f(by) h(eZ) f(systems,) h
-(and) f(we) h(pro) o(v) n(ide) g(this) g(\223as) h(is\224) f(without) f
-(an) o(y) g(form) f(of) i(guar) n(antee) g(or) f(endo) n(rsement,) 150
-2069 y(either) h(e) o(xp) n(licitly) h(or) f(implicitly) -5
-b(.) p Fh 150 2331 a(2.9.1) 99 b(Do) o(wnload) 25 b(the) g(F) n(ollo) o
-(wi) n(ng) p Fp 150 2512 a(Do) n(wnlo) n(ad) c(what) f(you) f(need) g
-(from) p Fk 20 w(http://d) n(eveloper.ez.n) n(o/filemanager/) n
-(list/23/) p Fp 20 w(and) h(install) g(the) h(rpm) n(s!) 150
-2636 y(That') -5 b(s) 20 b(all;) h(read) f(the) g(manu) n(al) h(from) e
-(the) i(start) f(after) g(that,) g(and) g(install) h(eZ) f(pub) n(lish)
-h(as) g(described) n(.) p 150 5455 1410 4 v Fg 240 5510
-a(9) p Ff 270 5534 a(The) 15 b(eZ) h(publi) r(sh) f(de) n(v) q(elope) r
-(rs) g(w) o(ant) i(to) g(point) g(out) f(that) i(this) e(does) h(NO) m
-(T) e(seem) h(to) g(be) h(a) f(secure) h(w) o(orka) r(round.) j(This) c
-(w) o(orkar) r(ound) g(should) h(not) f(be) 150 5613
-y(used) h(in) h(an) f(en) m(vi) r(ronment) h(where) f(the) h(serv) o
-(er) g(might) g(be) f(e) o(xposed) h(to) g(untruste) r(d) e(users) h
+ 150 138 a 150 172 3525 4 v Fn 150
+333 a(IIS) 22 b(Con\002gura) n(tion:) p Fp 150 513 a(-) e(Create) h
+(the) f(virtual) g(hosts) g(for) g(IIS.) g(\(on) n(ly) h(tested) f(on) g
+(win20) n(00\)) 150 638 y(\(here) f(comes) h(the) g(not) g(so) h(ele) o
+(ga) n(nt) g(part\)) 150 762 y(-) f(In) g(the) h(virtu) n(al) g(hosts) f
+(con\002g) g(for) f(the) i(user) f(site,) g(change) f(the) i(custom) e
+(error) n(s) p Fe 2455 732 a(9) p Fp 2510 762 a(for) g(404) h(and) f
+(405) g(to:) 254 887 y(Message) h(type:) 25 b(URL) 254
+1011 y(URL:) c(/inde) o(x) n(.php) 150 1136 y(-) f(In) g(the) h(virtu) n
+(al) g(hosts) f(con\002g) g(for) f(the) i(admin) e(site,) i(chan) n(ge)
+g(the) f(custom) f(errors) h(for) f(404) h(and) f(405) h(to:) 254
+1260 y(Message) g(type:) 25 b(URL) 254 1385 y(URL:) c(/inde) o(x) n
+(_adm) n(in.php) 150 1509 y(\(if) f(you) f(encoun) n(t) i(500-) n(err) f
+(you) f(may) h(need) g(to) g(rebo) n(ot) h(the) f(serv) o(er) m(,) f
+(Uhhh) n(..) 26 b(I) 20 b(lo) o(v) o(e) f(MS,) 150 1634
+y(it) i(gi) n(v) o(es) f(me) g(a) g(lot) h(of) f(cofee) f(brak) o(es.)
+25 b(eZPub) n(lish) c(runin) n(g) g(on) e(IIS) i(is) g(unstable) n(\)) p
+Fl 150 2064 a(2.9) 119 b(Mandrak) o(e) p Fp 150 2274
+a(Thank) n(s) 21 b(to) g(Mark) e(Polsen) h(for) g(gi) n(vin) n(g) h(us)
+f(this) h(infor) n(mation.) 150 2399 y(This) f(is) g(untested) f(by) h
+(eZ) f(systems,) h(and) f(we) h(pro) o(v) n(ide) g(this) g(\223as) h
+(is\224) f(without) f(an) o(y) g(form) f(of) i(guar) n(antee) g(or) f
+(endo) n(rsement,) 150 2498 y(either) h(e) o(xp) n(licitly) h(or) f
+(implicitly) -5 b(.) p Fh 150 2761 a(2.9.1) 99 b(Do) o(wnload) 25
+b(the) g(F) n(ollo) o(wi) n(ng) p Fp 150 2941 a(Do) n(wnlo) n(ad) c
+(what) f(you) f(need) g(from) p Fk 20 w(http://d) n(eveloper.ez.n) n
+(o/filemanager/) n(list/23/) p Fp 20 w(and) h(install) g(the) h(rpm) n
+(s!) 150 3066 y(That') -5 b(s) 20 b(all;) h(read) f(the) g(manu) n(al) h
+(from) e(the) i(start) f(after) g(that,) g(and) g(install) h(eZ) f(pub)
+n(lish) h(as) g(described) n(.) p 150 5455 1410 4 v Fg
+240 5510 a(9) p Ff 270 5534 a(The) 15 b(eZ) h(publi) r(sh) f(de) n(v) q
+(elope) r(rs) g(w) o(ant) i(to) g(point) g(out) f(that) i(this) e(does)
+h(NO) m(T) e(seem) h(to) g(be) h(a) f(secure) h(w) o(orka) r(round.) j
+(This) c(w) o(orkar) r(ound) g(should) h(not) f(be) 150
+5613 y(used) h(in) h(an) f(en) m(vi) r(ronment) h(where) f(the) h(serv)
+o(er) g(might) g(be) f(e) o(xposed) h(to) g(untruste) r(d) e(users) h
 (\(i.e) h(the) g(interne) r(t\)) p 150 5723 3525 4 v
 Fp 1871 5823 a(30) p 90 rotate dyy eop
 %%Page: 31 32
